--- a/hote_website/css/style.css
+++ b/hote_website/css/style.css
@@ -56,10 +56,32 @@ p{
   color: #333;
 }
 
+.btn-dark{
+  background: #333;
+  color: #fff;
+}
+
 .btn-light{
   background: #f4f4f4;
   color: #333;
 }
+
+.bg-dark{
+  background: #333;
+  color: #fff;
+}
+
+.bg-light{
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-primary{
+  background: #333;
+  color: #f7c08a;
+}
+
+
 
 
 /* Navbar */
@@ -135,5 +157,16 @@ line-height: 1.2em;
   float:left;
   width: 50%;
   background: url('../img/photo-1.jpg') no-repeat;
+  min-height: 100%;
+}
+
+#home-info .info-content{
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 50px 50px;
+  overflow: hidden;
+  
 }
 
