Starting making page about

--- a/hote_website/css/style.css
+++ b/hote_website/css/style.css
@@ -77,11 +77,13 @@ p{
 }
 
 .bg-primary{
-  background: #333;
-  color: #f7c08a;
+  background: #f7c08a;
+  color: #333;
 }
 
-
+.clr{
+  clear: both;
+}
 
 
 /* Navbar */
@@ -167,6 +169,28 @@ line-height: 1.2em;
   text-align: center;
   padding: 50px 50px;
   overflow: hidden;
-  
 }
 
+#home-info .info-content p {
+  padding-bottom: 30px;
+}
+
+/* Features section */
+.box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+.box i {
+  margin-bottom: 10px;
+}
+
+/* Footer */
+#main-footer {
+  text-align: center;
+  background: #444;
+  color: #fff;
+  padding: 20px;
+}
