--- a/hote_website/css/style.css
+++ b/hote_website/css/style.css
@@ -85,6 +85,10 @@ p{
   clear: both;
 }
 
+.l-heading{
+  font-size: 40px;
+}
+
 /* Padding */
 .py-1{  padding: 10px 0;}
 .py-2{  padding: 20px 0;}
@@ -194,7 +198,7 @@ line-height: 1.2em;
 
 /* About Info */
 #about-info .info-right{
-  /* float: right; */
+  float: right;
   /* vertical-align:middle; */
     width: 50%;
   min-height: 100%;
@@ -214,6 +218,33 @@ line-height: 1.2em;
   min-height: 100%;
 }
 
+/* Tesimonials */
+#testimonials{
+  height: 700px;
+  background: url('../img/test-bg.jpg')  no-repeat center center/cover;
+  padding-top: 100px;
+}
+
+#testimonials h2{
+  color: #fff;
+  text-align: center;
+  padding-bottom: 40px;
+}
+
+
+#testimonials .testimonial {
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+#testimonials .testimonial img {
+  width: 100px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
 
 
 /* Footer */
