--- a/hote_website/css/style.css
+++ b/hote_website/css/style.css
@@ -87,6 +87,7 @@ p{
 
 .l-heading{
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Padding */
@@ -108,7 +109,7 @@ p{
 }
 
 /* Nasze logo :) HBT */
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -161,7 +162,7 @@ line-height: 1.2em;
 /* Home Info */
 
 #home-info{
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img{
@@ -220,7 +221,7 @@ line-height: 1.2em;
 
 /* Tesimonials */
 #testimonials{
-  height: 700px;
+  height: 100%;
   background: url('../img/test-bg.jpg')  no-repeat center center/cover;
   padding-top: 100px;
 }
