--- a/EdgeLedger/css/style.css
+++ b/EdgeLedger/css/style.css
@@ -55,7 +55,7 @@ img{
 .navbar a{
   color: #fff;
   padding: 10px 20px;
-  margin 0 5px;
+  margin: 0 5px;
 }
 
 .navbar a:hover{
@@ -110,4 +110,23 @@ img{
 
 .hero * {
   z-index: 10;
+}
+
+/* Icons */
+.icons h3{
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+
+.icons i{
+  background-color: #28a745;
+  color:#fff;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+.cases img:hover {
+  opacity: 0.7;
 }
