--- a/EdgeLedger/css/style.css
+++ b/EdgeLedger/css/style.css
@@ -1,43 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-body{
+body {
   font-family: 'Open Sans', sans-serif;
   background: #fff;
   color: #333;
   line-height: 1.6;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   color: #333;
   text-decoration: none;
 }
 
-h1, h2{
+h1,
+h2 {
   font-weight: 300;
   line-height: 1.2;
 }
 
-p{
+p {
   margin: 10px 0;
 }
 
-img{
+img {
   width: 100%;
 }
 
 /* Navbar */
-
-.navbar{
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -49,33 +49,33 @@ img{
   position: fixed;
   top: 0px;
   padding: 0 30px;
-  transition: 0.5;
+  transition: 0.5s;
 }
 
-.navbar .top{
+.navbar.top {
   background: transparent;
 }
 
-.navbar a{
+.navbar a {
   color: #fff;
   padding: 10px 20px;
   margin: 0 5px;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   border-bottom: #28a745 2px solid;
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
 }
 
-.navbar .logo{
+.navbar .logo {
   font-weight: 400;
 }
 
 /* Header */
-.hero{
+.hero {
   background: url('../image_resources/home/showcase.jpg') no-repeat center center/cover;
   height: 100vh;
   position: relative;
@@ -92,44 +92,48 @@ img{
   padding: 0 20px;
 }
 
-.hero .content h1{
+.hero .content h1 {
   font-size: 55px;
 }
 
-.hero .content p{
+.hero .content p {
   font-size: 23px;
   max-width: 600px;
   margin: 20px 0 30px;
 }
 
-.hero::before{
-  content:'';
+.hero::before {
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .hero * {
   z-index: 10;
 }
 
-.hero.blog{
-  background: url('../image_resources/home/blog.jpg')no-repeat center center/cover;
-    height: 30vh;
+.hero.blog {
+  background: url('../image_resources/home/blog.jpg') no-repeat center center/cover;
+  height: 30vh;
 }
+
 /* Icons */
-.icons h3{
+.icons {
+  padding: 30px;
+}
+
+.icons h3 {
   font-weight: bold;
   margin-bottom: 15px;
 }
 
-
-.icons i{
+.icons i {
   background-color: #28a745;
-  color:#fff;
+  color: #fff;
   padding: 1rem;
   border-radius: 50%;
   margin-bottom: 15px;
@@ -139,7 +143,7 @@ img{
   opacity: 0.7;
 }
 
-.team img{
+.team img {
   border-radius: 50%;
 }
 
@@ -150,46 +154,47 @@ img{
 }
 
 .callback-form label {
-  display:block;
+  display: block;
   margin-bottom: 5px;
 }
 
 .callback-form .form-control {
-   margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .callback-form input {
   width: 100%;
   padding: 4px;
   height: 40px;
-  border: #f5f5f5 1px sold;
+  border: #f5f5f5 1px solid;
 }
 
-.callback-form-form input:focus{
+.callback-form input:focus {
   outline-color: #28a745;
 }
 
 .callback-form .btn {
-  padding: 12px  0;
-  margin-top: 12px;
+  padding: 12px 0;
+  margin-top: 20px;
 }
 
 /* Post */
-.post{
+.post {
   padding: 50px 30px;
 }
-.post h2{
+
+.post h2 {
   font-size: 40px;
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: #ccc solid 1px;
 }
 
-.post .meta{
+.post .meta {
   margin-bottom: 30px;
 }
 
-.post img{
+.post img {
   width: 300px;
   border-radius: 50%;
   display: block;
@@ -202,46 +207,46 @@ img{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align:  center;
+  text-align: center;
   height: 200px;
-
 }
 
 .footer a {
   color: #fff;
 }
 
-.footer a:hover{
-  color:#28a745;
+.footer a:hover {
+  color: #28a745;
 }
 
-.footer .social > * {
-  margin-right:  30px;
+.footer .social>* {
+  margin-right: 30px;
 }
 
 /* Mobile */
-@media(max-width: 768px){
-  .navbar{
+@media(max-width: 768px) {
+  .navbar {
     flex-direction: column;
     height: 120px;
     padding: 20px;
   }
 
-  .navbar a{
+  .navbar a {
     padding: 10px 10px;
     margin: 0 3px;
   }
 
-  .flex-items{
+  .flex-items {
     flex-direction: column;
   }
 
-  .flex-columns .column, .flex-grid .column{
+  .flex-columns .column,
+  .flex-grid .column {
     flex: 100%;
     max-width: 100%;
   }
 
-  .team img{
+  .team img {
     width: 70%;
   }
 }
