--- a/Miniprojects keyframes transitions etc/Knowlage resume CV/style.css
+++ b/Miniprojects keyframes transitions etc/Knowlage resume CV/style.css
@@ -57,16 +57,20 @@ h1 {
   padding: 1rem;
   background: var(--secondary-color);
   transition: all 0.5s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
 }
 
 /* Right side */
 #timeline ul li:nth-child(odd) div {
   left: 40px;
+  transform: translate(200px, 0);
 }
 
 /* left side */
 #timeline ul li:nth-child(even) div {
   left: -434px;
+  transform: translate(-200px, 0);
 }
 
 /* Dots */
@@ -74,7 +78,7 @@ h1 {
   content: '';
   position: absolute;
   left: 50%;
-  bottom 0;
+  bottom: 0;
   width: 25px;
   height: 25px;
   background: var(--secondary-color);
@@ -106,6 +110,20 @@ h1 {
   border-width: 8px 0 8px 16px;
   border-color: transparent transparent transparent var(--secondary-color);
 }
+
+/* Show Boxes */
+#timeline ul li.show div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+/* 
+#timeline ul li.show:after {
+  background: var(--secondary-color);
+} */
+
+
 
 @media(max-width: 900px) {
   #timeline ul li div {
