--- a/Miniprojects keyframes transitions etc/Knowlage resume CV/style.css
+++ b/Miniprojects keyframes transitions etc/Knowlage resume CV/style.css
@@ -33,13 +33,12 @@ h1 {
   font-size: 2.3rem;
 }
 
-/* TIMELINE */
 #timeline ul {
   background: var(--primary-color);
   padding: 50px 0;
 }
 
-/* Create white line */
+/* Create Line */
 #timeline ul li {
   list-style: none;
   position: relative;
@@ -61,13 +60,13 @@ h1 {
   opacity: 0;
 }
 
-/* Right side */
+/* Right Side */
 #timeline ul li:nth-child(odd) div {
   left: 40px;
   transform: translate(200px, 0);
 }
 
-/* left side */
+/* Left Side */
 #timeline ul li:nth-child(even) div {
   left: -434px;
   transform: translate(-200px, 0);
@@ -81,7 +80,7 @@ h1 {
   bottom: 0;
   width: 25px;
   height: 25px;
-  background: var(--secondary-color);
+  background: inherit;
   transform: translateX(-50%);
   border-radius: 50%;
   transition: background 0.5s ease-in-out;
@@ -104,7 +103,7 @@ h1 {
   border-color: transparent var(--secondary-color) transparent transparent;
 }
 
-/* Left Side Arrow */
+/* Left Side Arrows */
 #timeline ul li:nth-child(even) div:before {
   right: -15px;
   border-width: 8px 0 8px 16px;
@@ -118,11 +117,9 @@ h1 {
   opacity: 1;
 }
 
-/* 
 #timeline ul li.show:after {
   background: var(--secondary-color);
-} */
-
+}
 
 
 @media(max-width: 900px) {
@@ -134,7 +131,6 @@ h1 {
     left: -284px;
   }
 }
-
 
 @media(max-width: 600px) {
   #timeline ul li {
@@ -154,5 +150,4 @@ h1 {
     border-width: 8px 16px 8px 0;
     border-color: transparent var(--secondary-color) transparent transparent;
   }
-
 }
