--- a/News_Grid/CSS/style.css
+++ b/News_Grid/CSS/style.css
@@ -182,6 +182,9 @@ h6 {
   padding: 3rem;
 }
 
+.l-heading {
+  font-size: 3rem;
+}
 
 /* --------------------------- */
 
@@ -313,6 +316,17 @@ h6 {
   grid-column: 2 / span 2;
 }
 
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  padding: 0.5rem;
+}
+
+#article .meta .category {
+  margin-top: 0.4rem;
+}
 
 /* Footer */
 #main-footer {
