--- a/porfolio_website/scss/main.scss
+++ b/porfolio_website/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'configs';
+@import 'utilities';
 
 
 
@@ -42,16 +43,107 @@ img {
 }
 
 // Main Nav
+#main-nav{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+
+  ul{
+    display: flex;
+  }
+
+  li{
+    padding: 1rem 1.5rem;
+  }
+
+  a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 3px transparent solid;
+    padding-bottom: 0.5rem;
+    transition: border-color 0.5s;
+
+    &:hover{
+      border-color: $medium-color;
+    }
+
+    &.current{
+      border-color: $main-color;
+    }
+  }
+}
 
 // Header
 #header {
   // background: red;
-
+// header home
   &-home {
     background: $bg-image no-repeat center right / cover;
     height: 100vh;
     color: #fff;
+
+
+    // Header content
+    .header-content{
+      text-align: center;
+      padding-top: 20%;
+
+      h1{
+        font-size: 4rem;
+        line-height: 1.2;
+      }
+    }
+  }
+ // &-inner {}
+}
+
+// Home Sections
+#home{
+  // Home section A
+  &-a{
+    .specials{
+      margin-top: 3rem;
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: repeat(4, 1fr);
+
+      .fas{
+        color: $main-color;
+        padding-bottom: 0.4rem;
+      }
+    }
+  }
+  // Home section B
+  &-b{
+    .stats{
+      display:grid;
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    li{
+      line-height: 2;
+      
+      &.stats-title{
+        font-size: 1.5rem;
+      }
+
+      &.stats-number{
+        font-size:2rem;
+        font-weight: bold;
+      }
+    }
+
+    div{
+      // &:nth-child(odd){
+      //   background: $light-color;
+      // }
+
+      &:nth-child(even){
+        background: $medium-color;
+      }
+      padding: 1rem 0;
+    }
   }
 
-  // &-inner {}
 }
