--- a/MyOwnPorfolio/scss/main.scss
+++ b/MyOwnPorfolio/scss/main.scss
@@ -1,3 +1,6 @@
+@import "configs";
+@import 'utilities';
+ 
 //General Styles
 * {
   margin: 0;
@@ -12,4 +15,219 @@ body {
 
 a {
   text-decoration: none;
+  color: $dark-color;
+}
+
+ul {
+  list-style: none;
+}
+
+h2,
+h3,
+h4 {
+  text-transform: uppercase;
+}
+
+img {
+  width: 100%;
+}
+
+//Main Nav
+#main-nav{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+
+  ul{
+    display: flex;
+  }
+
+  li{
+    padding: 1rem 1.5rem;
+  }
+
+  a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 3px transparent solid;
+    padding-bottom: 0.5rem;
+    transition: border-color 0.5s;
+
+    &:hover{
+      border-color: $medium-color; 
+    }
+
+    &.current{
+      border-color: $main-color;
+    }
+  }
+}
+
+
+// Logo
+#logo{
+  width: 180px;
+  height: 140px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+// Header
+#header {
+  // Headr Home
+  &-home {
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), $bg-image no-repeat center right / cover;
+    height: 100vh;
+    color: #fff;
+
+    // Header Content
+    .header-content{
+      text-align: center;
+      padding-top: 20%; 
+
+      h1{
+        font-size: 4rem;
+        line-height:  1.2; 
+      }
+    }
+  }
+
+  // Header Inner
+  &-inner {
+    // background: $bg-image no-repeat 20% 30% / cover;
+    // height: 5.5rem;
+    // border-bottom: 3px solid $main-color; 
+  }
+}
+
+// Home Section
+#home{
+    // Home section A
+  &-a{
+    .specials{
+      margin-top: 3rem;
+      display: grid;
+      grid-gap: 1rem;
+      grid-template-columns: repeat(3,1fr);
+      
+      .fas{
+        color: $main-color;
+        padding: 0.4rem;
+        
+      }
+    }
+  }
+
+  // Home section B
+  &-b{
+    .stats{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      li{
+        line-height: 2;
+
+        &.stats-title{
+          font-size: 1.5rem;
+        }
+
+        &.stats-number{
+          font-size:2rem;
+          font-weight:bold
+        }
+      }
+
+      div{
+        padding: 3rem 0;
+ 
+        &:nth-child(odd){
+          background: $light-color;
+        }
+
+        &:nth-child(even){
+          background: $medium-color;
+        }
+      }
+    }
+  }
+
+  // Home section C
+  &-c{
+    .process{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 1.5rem;
+      text-align: center;
+      // process-step
+    &-step{
+      position: absolute;
+      top:0;
+      right: 0;
+      font-size: 28px;
+      background: $main-color;
+      color: set-text-color($main-color);
+      border-radius: 50%;
+      height: 15px;
+      width: 15px;
+      line-height: 15px;
+      padding: 1rem;
+      transition: all 1s;
+    }
+      //Process-icon
+      &-icon{
+        border-radius: 50%;
+        background: $dark-color;
+        color: #fff;
+        padding: 2rem;
+        width: 70px;
+        height: 70px;
+        line-height: 70px;
+        text-align: center;
+        position: relative;
+        transition: all 1s;
+
+        &:hover{
+          background: $main-color;
+          width: 90px;
+          height: 90px;
+          line-height: 90px;
+
+          .process-step{
+            background: $dark-color;
+            color: set-text-color($dark-color);
+          }
+        }
+      }
+    }
+  }
+}
+
+// Footer
+
+#main-footer{
+  background: $dark-color;
+  color:#fff;
+  height: 5rem;
+
+  .footer-content{
+    display:flex;
+    justify-content: space-between;
+    height: 5rem;
+    align-items: center;
+
+    .social .fab{
+      margin-right: 1rem;
+      border: 2px #fff solid;
+      border-radius: 50%;
+      height: 20px;
+      width: 20px;
+      text-align: center;
+      padding: 0.5rem;
+
+      &:hover{
+        background-color: $main-color;
+      }
+    }
+
+  }
 }
