--- a/MyOwnPorfolio/scss/main.scss
+++ b/MyOwnPorfolio/scss/main.scss
@@ -1,6 +1,7 @@
 @import "configs";
 @import 'utilities';
- 
+@import 'item_grid';
+  
 //General Styles
 * {
   margin: 0;
@@ -95,9 +96,9 @@ img {
 
   // Header Inner
   &-inner {
-    // background: $bg-image no-repeat 20% 30% / cover;
-    // height: 5.5rem;
-    // border-bottom: 3px solid $main-color; 
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), $bg-image no-repeat 20% 30% / cover;
+    height: 9rem;
+    border-bottom: 3px solid $main-color; 
   }
 }
 
@@ -167,7 +168,7 @@ img {
       background: $main-color;
       color: set-text-color($main-color);
       border-radius: 50%;
-      height: 15px;
+      height: 15px; 
       width: 15px;
       line-height: 15px;
       padding: 1rem;
@@ -201,6 +202,164 @@ img {
     }
   }
 }
+
+// About Sections
+
+#about{
+  &-a{
+    .about-info{
+      display: grid;
+      grid-template-areas: 'bioimage bio bio' 'aw1 aw2 aw3';
+      grid-gap: 1.2rem;
+    }
+
+    // Grid Ares
+    .bio-image{
+      grid-area: bioimage;
+    }
+
+    .bio{
+      grid-area:bio;
+      border-left: 3px solid $main-color;
+      padding: 0.8rem;
+    }
+
+    // .award-1{
+    //   grid-area: aw1;
+    // }
+    // .award-2{
+    //   grid-area: aw2;
+    // }
+    // .award-3{
+    //   grid-area: aw3;
+    // }
+
+    .award-1 .fas,
+    .award-2 .fas,
+    .award-3 .fas{
+      color: $main-color;
+      margin: 1rem;
+    }
+  }
+//About -B progress bars
+  &-b{
+    .progress {
+      overflow: hidden;
+      height: 20px;
+      background: $medium-color;
+      border-radius: 5px;
+      margin-bottom: 0.6rem;
+
+      div{
+        height: 100%;
+        color:#fff;
+        text-align: center;
+        background: $main-color;
+      }
+    }
+  }
+
+  // About c: Logos
+  &-c{
+    .about-logos{
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      grid-gap:2rem;
+
+      img{
+        width: 70%;
+        padding: 20px 0 20px 0;
+      }
+    }
+  }
+
+  // About: D: Tesmionials
+  &-d{
+    .testimonials{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 0.5rem;
+    }
+    
+    ul{
+      list-style: none;
+      margin-top: 1rem;
+      display:flex;
+      align-items: center;
+    }
+
+    p{
+      border:1px sollid $medium-color;
+      border-radius: 5px;
+      padding: 0.5rem;
+    }
+
+    img{
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+// Contact
+#contact{
+  &-a{
+    .text-fields{
+      display:grid;
+      grid-template-areas: 'name email' 'subject phone' 'message message';
+      grid-gap: 1.2rem;
+      margin-bottom: 1.2rem;
+
+      // Grid Ares
+      .name-input{
+        grid-area: name;
+      }
+      .subject-input{
+        grid-area: subject;
+      }
+      .email-input{
+        grid-area: email;
+      }
+      .phone-input{
+        grid-area: phone;
+      }
+      .message-input{
+        grid-area: message;
+        height: 100px;
+      }
+
+      .text-input{
+        padding: 0.5rem 1rem;
+      }      
+    }
+
+    button[type='submit']{
+      width: 50%;
+    }
+  }
+
+  // Section B: Contact Info
+  &-b{
+    .contact-info{
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      text-align: center;
+    }
+  }
+
+  //Section C: Tagline
+  &-c{
+    h1{
+      text-align: center;
+      font-size: 4rem;
+    }
+  }
+}
+
+
+  
 
 // Footer
 
